<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_conversion</name>
  <version>0.0.0</version>
  <description>Receive and transmit serial data.</description>
  <maintainer email="helloworldwithsoulas@gmail.com">soulas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>interfaces_msgs</depend>
  <depend>serial</depend>

  <export>
  </export>
</package>
